# NovusEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  editor_scene.json  imgui.ini  render_presets.json  scene.json  vcpkg.json
.claude/: settings.local.json
.github/: copilot-instructions.md
NovusEngineProject/: CMakeLists.txt  NovusEngineProject.cpp  NovusEngineProject.h
include/: ImGuizmo.cpp  ImGuizmo.h
models/: .gitattributes  AnimatedSoldier.glb  EnemyEly.gltf  FlightHelmet.gltf  Knight.glb  Knight2.glb  Man.gltf  Swat.gltf  Woman.gltf  knight.fbx
prefabs/: Assimp__Knight_glb.prefab.json  Assimp__Knight_glb_prefab.prefab.json  Damaged_Helmet_1.prefab.json  Flight_Helmet_2.prefab.json  Flight_Helmet_2_prefab.prefab.json  default.prefab.json
shaders/: bloom_blur.slang  bloom_blur.spv  bloom_extract.slang  bloom_extract.spv  bone_matrix.comp  bone_matrix.comp.spv  debug_lines.slang  debug_lines.spv  frustum_cull.comp  frustum_cull.comp.spv  fxaa.slang  fxaa.spv  imgui.slang  imgui.spv  pbr.slang  pbr.spv  pbr_indirect.slang  pbr_indirect.spv  shader.slang  shadow.slang  shadow.spv  shadow_skinning.slang  shadow_skinning.spv  skinning.slang  skinning.spv  slang.spv  trs_matrix.comp  trs_matrix.comp.spv
src/: imgui_vulkan_util.cpp  imgui_vulkan_util.h  main.cpp  vma_impl.cpp
src/ECS/: component.h  entity.h
src/ECS/components/: animation_component.h  camera_component.cpp  camera_component.h  hierarchy_component.h  light_component.h  mesh_component.h  physics_component.h  player_controller_component.h  renderable_component.h  transform_component.h
src/ECS/entt/: assimp_instance_component.h  assimp_systems.h  physics_components.h  physics_systems.h  scene.h  transform_systems.h
src/ECS/event/: event.h
src/ECS/jolt_physics/: physics_world.cpp  physics_world.h
src/core/: engine_app.cpp  engine_app.h  scene_runtime_service.cpp  scene_runtime_service.h  scene_runtime_state.cpp  scene_runtime_state.h  scene_serialization.cpp  scene_serialization.h
src/gameplay/: gameplay_layer.h  gameplay_runtime.cpp  gameplay_runtime.h
src/input/: input_system.cpp  input_system.h
src/model/: AssimpAnimChannel.cpp  AssimpAnimChannel.h  AssimpAnimClip.cpp  AssimpAnimClip.h  AssimpInstance.cpp  AssimpInstance.h  AssimpLoadedModel.cpp  AssimpLoadedModel.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  Tools.h  model.cpp  model.h
src/physics/: physics_system.cpp  physics_system.h
src/renderer/: VkRenderData.h  gpu_scene.cpp  gpu_scene.h  render_settings_io.cpp  render_settings_io.h  renderer.cpp  renderer.h  renderer_editor_entt.cpp  renderer_editor_panels.cpp  renderer_editor_panels_additional.cpp  renderer_editor_runtime_panels.cpp  renderer_gameplay_runtime.cpp  renderer_gpu_timestamps.cpp  renderer_ibl.cpp  renderer_indirect.cpp  renderer_types.h  shadow_pass.cpp  shadow_pass.h
src/renderer/passes/: pass_common.cpp  pass_common.h  renderer_frame_passes.cpp  renderer_post_process_passes.cpp  renderer_world_passes.cpp  shadow_pass.cpp  shadow_pass.h
src/vulkan/: CommandBuffer.cpp  CommandBuffer.h  IndexBuffer.h  Texture (2).cpp  Texture (2).h  VertexBuffer.h  assimp_texture.cpp  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  depth_target.cpp  depth_target.h  descriptors.cpp  descriptors.h  image.cpp  image.h  image_view.cpp  image_view.h  material.cpp  material.h  pipeline.cpp  pipeline.h  shader_storage_buffer.cpp  shader_storage_buffer.h  swap_chain.cpp  swap_chain.h  sync.cpp  sync.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  utils.h
textures/: white.ktx
textures/ibl/pisa/: brdf_lut.ktx2
